fix whitespace on right side of center div

--- a/src/components/Center/Center.scss
+++ b/src/components/Center/Center.scss
@@ -26,6 +26,7 @@
 
 .Center {
   position: relative;
+  overflow: hidden;
 
   &__background {
     background-image: linear-gradient(
